syntax = "proto3";

package pb.common;

option go_package = "/common/pb";

message PbRange {
    int64 start = 1;
    int64 size = 2;
}

message PbUtxoValueInDB {
    uint64 utxo_id = 1;
    int64 value = 2;
    uint64 addressId = 3;
}

message PbUtxoIdInDB {
   uint64 utxo_id = 1;
   int64 value = 2;
}

message PbAddressValueInDB {
   uint64 AddressId = 1;
   int32  AddressType = 2;
   repeated PbUtxoIdInDB utxos = 3;
}

